<resources>
    <string name="app_name">GitHub User App</string>
    <string name="setting">Setting</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="name">Name</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="search_hint">Username</string>
    <string name="following">Following</string>
    <string name="error_message">Failed to Load Data</string>
    <string name="not_found">Not Found</string>
    <string name="favorite">favorite</string>
    <string name="no_favorite_user">No Favorite User</string>
    <string name="save_favorite">Save Favorite\n</string>
    <string name="dark_mode">Dark Mode</string>
</resources>