<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_github_user_detail"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_github_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="#ADBAC7"
            android:textStyle="bold"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tv_github_bio_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="#ADBAC7"
            android:text="@string/bio"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_github_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#768390"
                android:text="@string/location"/>

            <TextView
                android:id="@+id/tv_github_repositories_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#768390"
                android:layout_marginStart="8dp"
                android:text="@string/repositories"/>

            <TextView
                android:id="@+id/tv_github_followers_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#768390"
                android:layout_marginStart="8dp"
                android:text="@string/followers"/>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>